--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -60,16 +60,19 @@ code {
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 .bg-gradient {
-    background-image: var(--bg-gradient);
+  background-image: var(--bg-gradient);
 }
-.bg-custom-blue {
+.bg-primary-blue {
+  background-color: var(--primary);
+}
+.bg-accent-blue {
   background-color: var(--accent);
 }
 .fill-primary {
-    fill: var(--primary);
+  fill: var(--primary);
 }
 .fill-alternative {
-    fill: var(--alternative);
+  fill: var(--alternative);
 }
 /* .bg-gradient2 {
   position: absolute;
