--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,7 +42,7 @@ const t = useTranslations(lang);
             <div class="flex flex-col justify-center items-center">
 
               <div>
-                <button id="toggle-dark-mode" class="inline-flex items-center justify-center rounded-md text-gray-400 hover:opacity-75 focus:ring-2 hover:opacity-75 focus:ring-inset hover:opacity-75 focus:ring-blue p-2">
+                <button id="toggle-dark-mode" class="inline-flex items-center justify-center rounded-md text-gray-400 hover:opacity-75 focus:ring-2 focus:ring-inset focus:ring-blue p-2">
                   <svg id="moon-icon" fill="none" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path fill="white" stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z"></path>
                   </svg>
@@ -54,7 +54,7 @@ const t = useTranslations(lang);
 
               <div class="inset-y-0 left-0 flex items-center md:hidden">
                 <!-- Mobile menu button -->
-                <button id="toggle-mobile-menu" type="button" class="inline-flex items-center justify-center rounded-md text-gray-400 hover:opacity-75 focus:ring-2 hover:opacity-75 focus:ring-inset hover:opacity-75 focus:ring-blue p-2" aria-controls="mobile-menu" aria-expanded="false">
+                <button id="toggle-mobile-menu" type="button" class="inline-flex items-center justify-center rounded-md text-gray-400 hover:opacity-75 focus:ring-2 focus:ring-inset focus:ring-blue p-2" aria-controls="mobile-menu" aria-expanded="false">
                   <span class="sr-only">Open main menu</span>
                   <svg id="menu-open" class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">            <!-- aria-hidden="true" -->
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -77,16 +77,16 @@ const t = useTranslations(lang);
         <div class="text-center space-y-1 px-2 pb-3 pt-2">
 
           <!-- aria-current="page" -->
-          <a href={`/${lang}`} title="Home" class="text-gray-500 dark:text-white transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}`} title="Home" class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">Home</span>
           </a>
-          <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}/blog`} title="Blog" class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">Blog</span>
           </a>
-          <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}/work-experience`} title={t('experience')} class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">{t('experience')}</span>
           </a>
-          <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white transition block rounded-md px-3 py-2 text-base font-medium">
+          <a href={`/${lang}/contact`} title={t('contact')} class="text-gray-500 dark:text-white hover:opacity-75 transition block rounded-md px-3 py-2 text-base font-medium">
             <span class="text-sm font-medium">{t('contact')}</span>
           </a>
 
