--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -1,5 +1,6 @@
 .main-article-content {
-    h1, a {
+    a {
+        font-weight: 500;
         color: var(--primary);
     }
     a:hover, a:focus {
