--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -116,12 +116,12 @@ const year = new Date().getFullYear();
           <nav aria-label="Legal" class="mt-6">
             <ul class="space-y-4 text-sm">
               <li>
-                <a href={`/rss.xml`} title="RSS" class="font-medium transition hover:opacity-75">
+                <a href={`/rss.xml`} title="RSS" class="text-white transition hover:opacity-75">
                   RSS
                 </a>
               </li>
               <!-- <li>
-                <a href={`/${lang}/policy`} title={t('policy')} class="font-medium transition hover:opacity-75">
+                <a href={`/${lang}/policy`} title={t('policy')} class="text-white transition hover:opacity-75">
                   {t('policy')}
                 </a>
               </li> -->
