--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -72,7 +72,7 @@ const post = Astro.props;
 
   <br><br><br>
 
-  <section class="bg-techs">
+  <section class="bg-techs bg-polygon">
     <div class="techs-main-box main-width">
       <h2 class="text-white text-center mb-4">
         My six-year career knowledge carried me through
@@ -156,24 +156,6 @@ const post = Astro.props;
   h2 {
     // Override grandient color
     -webkit-text-fill-color: white;
-  }
-  &::before, &::after {
-    content: "";
-    position: absolute;
-    background: var(--primary);
-    width: 100%;
-    height: 180px;
-    left: 0;
-    overflow: hidden;
-    backface-visibility: visible;
-  }
-  &::before {
-    clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 100%, 0 100%);
-    top: -50px;
-  }
-  &::after {
-    clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
-    bottom: -50px;
   }
 }
 .techs-main-box {
