--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -86,8 +86,8 @@ const year = new Date().getFullYear();
           <nav aria-label={t('footer.recommends')} class="mt-6">
             <ul class="space-y-4 text-sm">
               <li>
-                <a href={`/${lang}/tags`} title="All tags" class="text-white transition hover:opacity-75">
-                  All tags
+                <a href={`/${lang}/tags`} title={t('all-tags')} class="text-white transition hover:opacity-75">
+                  {t('all-tags')}
                 </a>
               </li>
               <li>
