--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -91,7 +91,7 @@ export async function getStaticPaths() {
   }
   .contact-box {
     position: relative;
-    border: 2px solid var(--primary);
+    border: 1px solid var(--white);
     border-radius: 25px;
     box-shadow: 0 8px 32px 0 rgba(20, 20, 100, 0.2);
     margin: 15px 0;
