--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -29,7 +29,6 @@ const lang = getLangFromUrl(Astro.url);
     <Header></Header>
     <br>
     <LanguagePicker></LanguagePicker>
-    <!-- <div class="bg-gradient flex justify-center"></div> -->
     <main class={`${addWidth ? 'main-width' : ''}`}>
       <slot />
     </main>
@@ -77,9 +76,10 @@ code {
 /* .bg-gradient2 {
   position: absolute;
   width: 100%;
-  height: 75vh;
-  background: linear-gradient(160deg,var(--primary) 15%,var(--accent) 50%,var(--primary) 85%);
+  height: 50vh;
+  background: linear-gradient(160deg,white 15%, white 50%, white 85%);
   opacity: .15;
   filter: blur(50px);
+  z-index: 1;
 } */
 </style>
