--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -67,7 +67,7 @@ hr {
 .cards-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+    gap: 5rem 1rem;
     padding: 0;
 }
 @media (max-width: 768px) {
@@ -90,10 +90,10 @@ hr {
     backface-visibility: visible;
   }
 .bg-polygon::before {
-    clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 100%, 0 100%);
+    clip-path: polygon(0 25%, 75% 0, 100% 25%, 100% 100%, 0 100%);
     top: -50px;
 }
 .bg-polygon::after {
-    clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 25% 100%, 0 75%);
     bottom: -50px;
 }
