--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -26,6 +26,7 @@ const urlWithoutLang = currentUrl.slice(4);   // Remove /{lang}/
   right: 5px;
   box-shadow: 0px 3px 6px #00000029;
   z-index: 2;
+  clip-path: polygon(0% 5%, 100% 0, 100% 0%, 100% 100%, 0 95%);
 }
 #language-picker li a {
   font-size: 20px;
@@ -38,7 +39,7 @@ const urlWithoutLang = currentUrl.slice(4);   // Remove /{lang}/
 }
 .active {
   color: white;
-  background-color: var(--primary);
+  background-color: var(--accent);
   text-decoration: none !important;
 }
 @media (max-width: 600px) {
