--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -61,15 +61,17 @@ const { recents, collections } = Astro.props;
     <div role="list" class="cards-grid">
       {
         recents.map((item: any) => (
-          <BlogCard
-            slug={item.slug}
-            collection={item.collection}
-            title={item.data.title}
-            description={item.data.description}
-            image={item.data.image}
-            pubDate={item.data.pubDate}
-          >
-          </BlogCard>
+          <div class="polygon-shadow-hover">
+            <BlogCard
+              slug={item.slug}
+              collection={item.collection}
+              title={item.data.title}
+              description={item.data.description}
+              image={item.data.image}
+              pubDate={item.data.pubDate}
+            >
+            </BlogCard>
+          </div>
         ))
       }
     </div>
