--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -69,6 +69,12 @@ export async function getStaticPaths() {
                   <path fill="#FAFAFA" d="M273.5 26.3a109.77 109.77 0 0 1-32.2 8.8 56.07 56.07 0 0 0 24.7-31 113.39 113.39 0 0 1-35.7 13.6 56.1 56.1 0 0 0-97 38.4 54 54 0 0 0 1.5 12.8A159.68 159.68 0 0 1 19.1 10.3a56.12 56.12 0 0 0 17.4 74.9 56.06 56.06 0 0 1-25.4-7v.7a56.11 56.11 0 0 0 45 55 55.65 55.65 0 0 1-14.8 2 62.39 62.39 0 0 1-10.6-1 56.24 56.24 0 0 0 52.4 39 112.87 112.87 0 0 1-69.7 24 119 119 0 0 1-13.4-.8 158.83 158.83 0 0 0 86 25.2c103.2 0 159.6-85.5 159.6-159.6 0-2.4-.1-4.9-.2-7.3a114.25 114.25 0 0 0 28.1-29.1"></path>
                 </svg>
               </a>
+              <a href="https://platzi.com/p/KevinFiorentino/" title="Platzi" target="_blank" rel="noreferrer" class="transition hover:opacity-75 ml-3">
+                <span class="sr-only">Platzi</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 65 75" height="30"  style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <g><path fill="#FAFAFA" d="M 30.5,-0.5 C 33.8333,-0.5 37.1667,-0.5 40.5,-0.5C 49.8996,6.56474 57.8996,14.8981 64.5,24.5C 64.5,26.5 64.5,28.5 64.5,30.5C 58.9607,37.5475 52.794,44.2141 46,50.5C 45.3333,51.1667 45.3333,51.8333 46,52.5C 48.5535,54.7162 50.7201,57.2162 52.5,60C 49.2756,64.7261 45.2756,68.5595 40.5,71.5C 37.1667,71.5 33.8333,71.5 30.5,71.5C 19.8333,61.5 9.5,51.1667 -0.5,40.5C -0.5,37.1667 -0.5,33.8333 -0.5,30.5C 9.5,19.8333 19.8333,9.5 30.5,-0.5 Z M 34.5,12.5 C 40.4218,16.7513 45.7551,21.7513 50.5,27.5C 45.5,32.8333 40.5,38.1667 35.5,43.5C 37.8333,46.1667 40.1667,48.8333 42.5,51.5C 40.5,54.1667 38.1667,56.5 35.5,58.5C 27.5,51.1667 19.8333,43.5 12.5,35.5C 19.8548,27.8128 27.1881,20.1461 34.5,12.5 Z"/></g>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
