--- a/src/pages/[lang]/tags/[tag].astro
+++ b/src/pages/[lang]/tags/[tag].astro
@@ -81,15 +81,17 @@ const props = Astro.props;
   <div role="list" class="cards-grid">
     {
       props.posts.map((item: any) => (
-        <BlogCard
-          slug={item.slug}
-          collection={item.collection}
-          title={item.data.title}
-          description={item.data.description}
-          image={item.data.image}
-          pubDate={item.data.pubDate}
-        >
-        </BlogCard>
+        <div class="polygon-shadow-hover">
+          <BlogCard
+            slug={item.slug}
+            collection={item.collection}
+            title={item.data.title}
+            description={item.data.description}
+            image={item.data.image}
+            pubDate={item.data.pubDate}
+          >
+          </BlogCard>
+        </div>
       ))
     }
   </div>
