--- a/src/pages/[lang]/tags/index.astro
+++ b/src/pages/[lang]/tags/index.astro
@@ -83,7 +83,7 @@ const tags = Astro.props.tags;
     margin: 0 auto;
 
     .tag-box {
-      filter: drop-shadow(0px 3px 6px #00000029);
+      filter: drop-shadow(0px 3px 6px var(--shadow));
 
       .tag {
         display: block;
