--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -24,8 +24,8 @@ const urlWithoutLang = currentUrl.slice(4);   // Remove /{lang}/
   position: fixed;
   top: calc(50% - 100px);
   right: 5px;
-  box-shadow: 0px 3px 6px #00000029;
   z-index: 2;
+  box-shadow: 0px 3px 6px var(--shadow);
   clip-path: polygon(0% 5%, 100% 0, 100% 0%, 100% 100%, 0 95%);
 }
 #language-picker li a {
