--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -45,6 +45,7 @@ const lang = getLangFromUrl(Astro.url);
   --accent: #2A72B2;
   --alternative: #E1C546;
   --bg-gradient: linear-gradient(0deg, var(--primary) 0%, var(--accent) 100%);
+  --shadow: #00000029;
 }
 html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
