--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -14,7 +14,7 @@
             color: white;
             background-color: var(--primary);
             padding: 2px;
-            box-shadow: 0 3px 6px #00000029;
+            box-shadow: 0 3px 6px var(--shadow);
         }
     }
     ul {
@@ -37,7 +37,7 @@
     pre {
         padding: 15px;
         margin-bottom: 15px;
-        box-shadow: 0 3px 6px #00000029;
+        box-shadow: 0 3px 6px var(--shadow);
     }
     blockquote {
         font-style: italic;
