--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -56,6 +56,7 @@ body {
   min-height: 100vh;
 }
 code {
+  font-size: .9rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
