--- a/src/components/articles/Aside.astro
+++ b/src/components/articles/Aside.astro
@@ -19,8 +19,8 @@ const relateds = relatedPosts ? await getEntries(relatedPosts as any) : null;
 
 ---
 
-<aside class="p-0 sm:p-4">
-  <div>
+<aside class="bg-polygon relative bg-gray-200 dark:bg-gray-700 p-3 sm:p-4">
+  <div class="relative z-10">
     <div class="flex flex-col">
       <h3>{ relateds ? 'Related content' : '' }</h3>
       {
@@ -49,9 +49,4 @@ const relateds = relatedPosts ? await getEntries(relatedPosts as any) : null;
       </div>
     </div>
   </div>
-
 </aside>
-
-<style lang="scss">
-
-</style>
