--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const year = new Date().getFullYear();
 <footer class="bg-accent-blue dark:bg-gray-900">
   <div class="mx-auto max-w-screen-xl space-y-8 px-4 py-16 sm:px-6 lg:space-y-16 lg:px-8">
     <div class="grid grid-cols-1 gap-8 lg:grid-cols-3">
-      <div>
+      <div class="z-10">
 
         <p class="sign text-white font-bold block text-2xl sm:text-3xl">
           Kev —△🌈 <br>
@@ -55,7 +55,7 @@ const year = new Date().getFullYear();
         </ul>
       </div>
 
-      <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:col-span-2 lg:grid-cols-3">
+      <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:col-span-2 lg:grid-cols-3 z-10">
 
         <div>
           <p class="font-bold text-white">
@@ -151,6 +151,8 @@ const year = new Date().getFullYear();
 
 <style lang="scss">
 footer {
+  position: relative;
+
   .sign {
     line-height: 25px;
 
@@ -159,4 +161,17 @@ footer {
     }
   }
 }
+footer::before {
+  content: "";
+  position: absolute;
+  background: var(--accent);
+  width: 100%;
+  height: 180px;
+  left: 0;
+  overflow: hidden;
+  backface-visibility: visible;
+  clip-path: polygon(0 25%, 75% 0, 100% 25%, 100% 100%, 0 100%);
+  top: -50px;
+}
+// footer::before dark mode estiled on global.scss
 </style>
