--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const t = useTranslations(lang);
           <div class="flex flex-1 items-center justify-center sm:items-center sm:justify-between">
 
             <div class="text-center sm:text-left">
-              <a href="/" class="text-2xl font-bold text-gray-800 dark:text-white">
+              <a href={`/${lang}`} class="text-2xl font-bold text-gray-800 dark:text-white">
                 Kevin Fiorentino —△🌈
               </a>
               <p class="mt-1.5 text-sm">
