--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -1,4 +1,7 @@
 .main-aside-content {
+    .bg-polygon::before, .bg-polygon::after {
+        background: #E4E4E7;
+    }
     h3 {
         font-size: 1.7rem;
         color: var(--primary);
@@ -19,5 +22,10 @@
     .badge:hover, .badge:focus {
         color: white;
         background: var(--bg-gradient);
+    }
+}
+.dark .main-aside-content {
+    .bg-polygon::before, .bg-polygon::after {
+        background: #374151;
     }
 }
