--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -124,7 +124,7 @@ const year = new Date().getFullYear();
           <nav aria-label="Legal" class="mt-6">
             <ul class="space-y-4 text-sm">
               <li>
-                <a href={`/rss.xml`} title="RSS" class="text-white transition hover:opacity-75">
+                <a href={`/rss.xml`} target="_blank" title="RSS" class="text-white transition hover:opacity-75">
                   RSS
                 </a>
               </li>
