--- a/src/components/articles/Aside.astro
+++ b/src/components/articles/Aside.astro
@@ -38,15 +38,64 @@ const relateds = relatedPosts ? await getEntries(relatedPosts as any) : null;
     </div>
     <div>
       <h3>Might interest you</h3>
-      <div class="flex flex-wrap">
+      <ul class="colls-box flex flex-wrap" role="list">
         {
           collectionMetadata?.map((coll: any) => (
-            <a href={`/${lang}/blog/${coll.name}`} class="badge capitalize hover:opacity-80 mt-3 mr-2" title={`Collection: ${coll.name}`}>
-              { coll.name }
-            </a>
+            <li class="coll" role="listitem">
+              <a href={`/${lang}/blog/${coll.name}`} class="capitalize" title={`Collection: ${coll.name}`}>
+                { coll.name }
+              </a>
+            </li>
           ))
         }
-      </div>
+      </ul>
     </div>
   </div>
 </aside>
+
+<style lang="scss">
+.colls-box {
+  li {
+    position: relative;
+    background-color: var(--accent);
+    border: 0px solid var(--accent);
+    margin: 12px 5px;
+
+    a {
+      position: relative;
+      color: var(--white);
+      display: block;
+      padding: 0 10px;
+      border: transparent;
+      z-index: 10;
+    }
+    a::before, a::after {
+      content: "";
+      position: absolute;
+      background: var(--accent);
+      width: 100%;
+      height: 15px;
+      left: 0;
+      overflow: hidden;
+      backface-visibility: visible;
+      transition: .5s;
+    }
+    a::before {
+      clip-path: polygon(0 25%, 75% 0, 100% 25%, 100% 100%, 0 100%);
+      top: -10px;
+    }
+    a::after {
+      clip-path: polygon(0 0, 100% 0, 100% 75%, 25% 100%, 0 75%);
+      bottom: -10px;
+    }
+    a:hover::before, a:focus::before {
+      clip-path: polygon(0 25%, 25% 0, 100% 25%, 100% 100%, 0 100%);
+      transition: .5s;
+    }
+    a:hover::after, a:focus::after {
+      clip-path: polygon(0 0, 100% 0, 100% 75%, 75% 100%, 0 75%);
+      transition: .5s;
+    }
+  }
+}
+</style>
