--- a/src/components/articles/Breadcrumbs.astro
+++ b/src/components/articles/Breadcrumbs.astro
@@ -12,7 +12,7 @@ const { collection } = Astro.props;
 
 <div class="mb-3">
   <ul class="flex">
-    <li class="dark:text-white hover:opacity-75 mr-2">
+    <li class="dark:text-white mr-2">
       <a href=`/${lang}` class="" title="Home">
         <span class="sr-only">Home</span>
         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" style="margin-top: 4px;" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -21,11 +21,11 @@ const { collection } = Astro.props;
       </a>
     </li>
     <li class="dark:text-white mr-2">/</li>
-    <li class="dark:text-white hover:opacity-75 mr-2">
+    <li class="dark:text-white mr-2">
       <a href=`/${lang}/blog` class="" title="Blog">Blog</a>
     </li>
     <li class="dark:text-white mr-2">/</li>
-    <li class="dark:text-white hover:opacity-75 mr-2">
+    <li class="dark:text-white mr-2">
       <a href=`/${lang}/blog/${collection}` class="capitalize mr-2" title={`Collection: ${collection}`}>{collection}</a>
     </li>
   </ul>
@@ -34,5 +34,8 @@ const { collection } = Astro.props;
 <style>
 li, li a {
   font-weight: 300;
+}
+li a:hover {
+  text-decoration: underline;
 }
 </style>
