--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -204,7 +204,10 @@ const post = Astro.props;
     }
   }
   .btn-know {
+    display: inline-block;
     background-color: var(--alternative);
+    height: 55px;
+    clip-path: polygon(0 0,100% 0,100% 75%,0% 100%,0 75%);
   }
   .btn-know:hover, .btn-know:focus {
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
